[package]
name = "bi_chat"
version = "0.1.0"
authors = ["iobtl <tedmundhtl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
futures-channel = { version = "0.3.17", features = ["sink"]}
rusqlite = "0.26.1"
tokio = {version = "1.0", features = ["fs", "sync", "time", "macros", "rt-multi-thread"]}
tokio-stream = "0.1.1"
warp = "0.3.1"

[dev-dependencies]
rayon = "1.5"